--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 notebook/.obsidian/appearance.json
 notebook/.obsidian/app.json
 notebook/.obsidian/workspace.json
-notebook/.obsidian/plugins/*
-!notebook/.obsidian/plugins/*/data.json
+notebook/.obsidian/plugins/**/*
+!notebook/.obsidian/plugins/**/data.json
